# pld-compilateur

./: .gitignore  CMakeLists.txt
compiler/: CToIRVisitor.cpp  IRInstr.cpp  IROptimizer.cpp  IROptimizer.h  Operation.h
tests/: ifcc-test.py
tests/testfiles/expression/logique/: 12_or_vrai_pair.c  13_and_vrai_pair
