cmake_minimum_required(VERSION 3.27)
project(pld_compilateur)

set(CMAKE_CXX_STANDARD 14)

include_directories(compiler)
include_directories(tests/unit_testing)
include_directories(tests/unit_testing/test_gen_asm)

add_executable(pld_compilateur
        compiler/BasicBlock.cpp
        compiler/BasicBlock.h
        compiler/CFG.cpp
        compiler/CFG.h
        compiler/CToIRVisitor.cpp
        compiler/CToIRVisitor.h
        compiler/IRInstr.cpp
        compiler/IRInstr.h
        compiler/IROptimizer.cpp
        compiler/IROptimizer.h
        compiler/main.cpp
        compiler/Operation.h
        compiler/Type.h
        compiler/ValidatorVisitor.cpp
        compiler/ValidatorVisitor.h
        tests/testfiles/base/1_return42.c
        tests/testfiles/base/2_invalid_program.c
        tests/testfiles/base/3_return_var.c
        tests/testfiles/base/4_char_const.c
        tests/testfiles/base/5_vide.c
        tests/testfiles/base/6_instruction_vide.c
        tests/testfiles/do_while/01_do_while.c
        tests/testfiles/do_while/02_do_while_no_bloc.c
        tests/testfiles/do_while/03_do_while_no_bloc_no_instruction.c
        tests/testfiles/do_while/04_do_while_break.c
        tests/testfiles/do_while/05_do_while_continue.c
        tests/testfiles/do_while/06_do_while_do_while.c
        tests/testfiles/expression/affectation/01_simple.c
        tests/testfiles/expression/affectation/02_addition.c
        tests/testfiles/expression/affectation/03_multiplication.c
        tests/testfiles/expression/affectation/04_soustraction.c
        tests/testfiles/expression/affectation/05_division.c
        tests/testfiles/expression/affectation/06_combinaison.c
        tests/testfiles/expression/affectation/07_decalage_droite.c
        tests/testfiles/expression/affectation/08_declage_gauche.c
        tests/testfiles/expression/affectation/09_et.c
        tests/testfiles/expression/affectation/10_ou.c
        tests/testfiles/expression/affectation/11_xor.c
        tests/testfiles/expression/arithmetique/01_addition.c
        tests/testfiles/expression/arithmetique/02_soustraction.c
        tests/testfiles/expression/arithmetique/03_multiplication.c
        tests/testfiles/expression/arithmetique/04_division.c
        tests/testfiles/expression/arithmetique/05_additions_soustractions.c
        tests/testfiles/expression/arithmetique/06_multiplication_division.c
        tests/testfiles/expression/arithmetique/07_combinaison.c
        tests/testfiles/expression/arithmetique/08_soustraction_negative.c
        tests/testfiles/expression/arithmetique/09_moins_unaire.c
        tests/testfiles/expression/arithmetique/10_plus_unaire.c
        tests/testfiles/expression/arithmetique/11_operations_negations.c
        tests/testfiles/expression/arithmetique/12_division_zero.c
        tests/testfiles/expression/arithmetique/12_negation_effet_de_bord.c
        tests/testfiles/expression/arithmetique/13_modulo_zero.c
        tests/testfiles/expression/arithmetique/13_prefixe_plusplus.c
        tests/testfiles/expression/arithmetique/14_prefix_moinsmoins.c
        tests/testfiles/expression/arithmetique/15_postfix_plusplus.c
        tests/testfiles/expression/arithmetique/16_postfix_moinsmoins.c
        tests/testfiles/expression/arithmetique/17_prefixe_et_postfixe.c
        tests/testfiles/expression/arithmetique/18_chaine_postfixe_plusplus.c
        tests/testfiles/expression/arithmetique/19_chaine_prefixe_plusplus.c
        tests/testfiles/expression/arithmetique/20_chaine_postfixe_moinsmoins.c
        tests/testfiles/expression/arithmetique/21_chaine_prefixe_moinsmoins.c
        tests/testfiles/expression/arithmetique/22_combo_increment_decrement.c
        tests/testfiles/expression/arithmetique/23_increment_constante.c
        tests/testfiles/expression/bitwise/01_or.c
        tests/testfiles/expression/bitwise/02_and.c
        tests/testfiles/expression/bitwise/03_xor.c
        tests/testfiles/expression/bitwise/04_not.c
        tests/testfiles/expression/bitwise/05_combinaison.c
        tests/testfiles/expression/bitwise/06_decalage_droite.c
        tests/testfiles/expression/bitwise/07_decalage_gauche.c
        tests/testfiles/expression/combinaison/01_arithmetique_bitwise.c
        tests/testfiles/expression/combinaison/02_arithmetique_comparaison.c
        tests/testfiles/expression/combinaison/03_arithmetique_logique.c
        tests/testfiles/expression/combinaison/04_bitwise_comparaison.c
        tests/testfiles/expression/combinaison/05_bitwise_logique.c
        tests/testfiles/expression/combinaison/06_comparaison_logique.c
        tests/testfiles/expression/combinaison/07_tout.c
        tests/testfiles/expression/comparaison/01_egalite_vrai.c
        tests/testfiles/expression/comparaison/02_egalite_faux.c
        tests/testfiles/expression/comparaison/03_difference_vrai.c
        tests/testfiles/expression/comparaison/04_difference_faux.c
        tests/testfiles/expression/comparaison/05_superieur_vrai.c
        tests/testfiles/expression/comparaison/06_superieur_faux.c
        tests/testfiles/expression/comparaison/07_superieur_egal_vrai.c
        tests/testfiles/expression/comparaison/08_superieur_egal_faux.c
        tests/testfiles/expression/comparaison/09_inferieur_vrai.c
        tests/testfiles/expression/comparaison/10_inferieur_faux.c
        tests/testfiles/expression/comparaison/11_inferieur_egal_vrai.c
        tests/testfiles/expression/comparaison/12_inferieur_egal_faux.c
        tests/testfiles/expression/comparaison/13_egalites.c
        tests/testfiles/expression/comparaison/14_inegalites.c
        tests/testfiles/expression/comparaison/15_combinaison.c
        tests/testfiles/expression/logique/01_not_vrai.c
        tests/testfiles/expression/logique/02_not_faux.c
        tests/testfiles/expression/logique/03_or_vrai.c
        tests/testfiles/expression/logique/04_or_faux.c
        tests/testfiles/expression/logique/05_and_vrai.c
        tests/testfiles/expression/logique/06_and_faux.c
        tests/testfiles/expression/logique/07_combinaison.c
        tests/testfiles/expression/logique/08_lazy_or.c
        tests/testfiles/expression/logique/09_not_so_lazy_or.c
        tests/testfiles/expression/logique/10_lazy_and.c
        tests/testfiles/expression/logique/11_not_so_lazy_and.c
        tests/testfiles/for/01_for.c
        tests/testfiles/for/02_for_shadowing.c
        tests/testfiles/for/03_inside_for_shadowing.c
        tests/testfiles/for/04_for_no_bloc_no_instruction.c
        tests/testfiles/for/05_for_break.c
        tests/testfiles/for/06_for_continue.c
        tests/testfiles/for/07_for_imbriques.c
        tests/testfiles/for/08_for_epure.c
        tests/testfiles/for/09_for_no_bloc_declaration.c
        tests/testfiles/for/10_for_skip.c
        tests/testfiles/functions/01_another_function.c
        tests/testfiles/functions/02_function_call.c
        tests/testfiles/functions/02_no_main.c
        tests/testfiles/functions/03_function_variable_names.c
        tests/testfiles/functions/03_no_return.c
        tests/testfiles/functions/04_function_after_main.c
        tests/testfiles/functions/04_functions_with_parameters.c
        tests/testfiles/functions/05_2_main.c
        tests/testfiles/functions/06_meme_fonction.c
        tests/testfiles/functions/07_fonction_while.c
        tests/testfiles/functions/08_fonction_if.c
        tests/testfiles/functions/09_fonction_meme_parametre.c
        tests/testfiles/functions/10_fonction_redefinition_parametre.c
        tests/testfiles/functions/11_factorielle_recursive.c
        tests/testfiles/functions/12_noms_fonction_paramètre_identiques.c
        tests/testfiles/functions/13_surcharge_fonction.c
        tests/testfiles/functions/14_fonctions_identiques_noms_parametres_differents.c
        tests/testfiles/functions/15_fonction_expressions_effet_de_bord.c
        tests/testfiles/functions/16_call_main.c
        tests/testfiles/functions/17_priorite_appel.c
        tests/testfiles/functions/18_local_var_in_one_function_param_in_another.c
        tests/testfiles/functions/19_fibonacci_recursion.c
        tests/testfiles/functions/20_local_vars_within_subblocks_same_as_param.c
        tests/testfiles/functions/21_code_after_return.c
        tests/testfiles/functions/21_hello_putchar.c
        tests/testfiles/functions/23_defined_below_void_func_in_expr.c
        tests/testfiles/functions/24_void_function_in_declaration.c
        tests/testfiles/functions/25_void_function_in_return_stmt.c
        tests/testfiles/functions/26_void_function_in_ifelse.c
        tests/testfiles/functions/27_void_function_in_whileloop.c
        tests/testfiles/functions/28_void_function_in_exprUnaire.c
        tests/testfiles/functions/29_void_function_in_exprMDM.c
        tests/testfiles/functions/30_void_function_in_exprAS.c
        tests/testfiles/functions/31_void_function_in_bwshift.c
        tests/testfiles/functions/32_void_function_in_exprNE.c
        tests/testfiles/functions/33_void_function_in_exprEQ.c
        tests/testfiles/functions/34_void_function_in_exprAND.c
        tests/testfiles/functions/35_void_function_in_exprXOR.c
        tests/testfiles/functions/36_void_function_in_exprOR.c
        tests/testfiles/functions/37_void_function_in_exprLAND.c
        tests/testfiles/functions/38_void_function_in_exprLOR.c
        tests/testfiles/functions/39_void_function_in_exprCall.c
        tests/testfiles/functions/40_void_function_in_exprAffectation.c
        tests/testfiles/functions/41_recursive_function_with_a_lot_of_params.c
        tests/testfiles/if/01_if.c
        tests/testfiles/if/02_if_else.c
        tests/testfiles/if/03_ifelse_ifelse.c
        tests/testfiles/if/04_2if_imbriques.c
        tests/testfiles/if/05_if_no_bloc.c
        tests/testfiles/if/06_if_no_bloc_declaration.c
        tests/testfiles/if/07_invalid_break.c
        tests/testfiles/if/08_invalid_continue.c
        tests/testfiles/if/09_more_if.c
        tests/testfiles/if/10_if_no_bloc_no_instruction.c
        tests/testfiles/if/11_shadowing.c
        tests/testfiles/if/12_if_no_bloc_while.c
        tests/testfiles/if/13_if_no_condition.c
        tests/testfiles/if/14_if_lazy_et.c
        tests/testfiles/variables/01_good.c
        tests/testfiles/variables/02_unused_variable.c
        tests/testfiles/variables/03_undeclared_return.c
        tests/testfiles/variables/04_variable_redefinition.c
        tests/testfiles/variables/05_undeclared_variable.c
        tests/testfiles/variables/06_undeclared_affectation.c
        tests/testfiles/variables/07_utilisation_hors_bloc.c
        tests/testfiles/variables/08_variable_if.c
        tests/testfiles/variables/09_declaration_sans_nom.c
        tests/testfiles/while/01_while.c
        tests/testfiles/while/02_while_skip.c
        tests/testfiles/while/03_while_no_bloc.c
        tests/testfiles/while/04_while_no_bloc_declaration.c
        tests/testfiles/while/05_while_break.c
        tests/testfiles/while/06_while_continue.c
        tests/testfiles/while/07_while_if_break.c
        tests/testfiles/while/08_while_if_continue.c
        tests/testfiles/while/09_while_while_break.c
        tests/testfiles/while/10_while_while_continue.c
        tests/testfiles/while/11_more_while.c
        tests/testfiles/while/12_while_no_bloc_no_instruction.c
        tests/testfiles/while/13_shadowing.c
        tests/testfiles/while/14_while_no_condition.c
        tests/testfiles/while/15_while_lazy_condition.c
        tests/unit_testing/test_gen_asm/BasicBlock.cpp
        tests/unit_testing/test_gen_asm/BasicBlock.h
        tests/unit_testing/test_gen_asm/CFG.cpp
        tests/unit_testing/test_gen_asm/CFG.h
        tests/unit_testing/test_gen_asm/helper.cpp
        tests/unit_testing/test_gen_asm/helper.h
        tests/unit_testing/test_gen_asm/test_gen_asm.cpp
        tests/unit_testing/helper.h)
